[package]
name = "cool_plugin"
version = "0.1.0"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
plugitin = { path = "../plugitin", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }